--- a/rtg/package.json
+++ b/rtg/package.json
@@ -11,6 +11,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
+    "react-router-prop-types": "0.0.3",
     "react-scripts": "1.0.17",
     "react-tap-event-plugin": "^3.0.2"
   },
