--- a/rtg/package.json
+++ b/rtg/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "eslint-config-airbnb": "^16.1.0",
+    "json-server": "^0.12.1",
     "material-ui": "^0.20.0",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.2",
@@ -22,6 +23,7 @@
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
+    "mock-server": "json-server -p 8000 -w -d 300 config/json-server/db.json",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
