--- a/rtg/package.json
+++ b/rtg/package.json
@@ -6,14 +6,14 @@
     "eslint-config-airbnb": "^16.1.0",
     "json-server": "^0.12.1",
     "material-ui": "^0.20.0",
-    "node-sass-chokidar": "0.0.3",
+    "node-sass-chokidar": "^1.1.1",
     "npm-run-all": "^4.1.2",
-    "prop-types": "^15.6.0",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
-    "react-router-prop-types": "0.0.3",
-    "react-scripts": "1.0.17",
+    "react-router-prop-types": "^1.0.0",
+    "react-scripts": "^1.1.1",
     "react-tap-event-plugin": "^3.0.2"
   },
   "scripts": {
