--- a/rtg/package.json
+++ b/rtg/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "date-fns": "^1.29.0",
     "eslint-config-airbnb": "^16.1.0",
     "json-server": "^0.12.1",
     "material-ui": "^0.20.0",
