--- a/rtg/package.json
+++ b/rtg/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "date-fns": "^1.29.0",
     "eslint-config-airbnb": "^16.1.0",
     "hsl-to-hex": "^1.0.0",
