--- a/rtg/package.json
+++ b/rtg/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^4.2.2",
     "react-router-prop-types": "^1.0.3",
     "react-scripts": "^1.1.4",
-    "react-tap-event-plugin": "^3.0.2"
+    "react-tap-event-plugin": "^3.0.2",
+    "whatwg-fetch": "^2.0.4"
   },
   "scripts": {
     "clean": "rm -rf build",
