--- a/rtg/package.json
+++ b/rtg/package.json
@@ -8,6 +8,7 @@
     "eslint-config-airbnb": "^16.1.0",
     "hsl-to-hex": "^1.0.0",
     "json-server": "^0.12.1",
+    "jwt-decode": "^2.2.0",
     "material-ui": "^0.20.0",
     "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.2",
