--- a/rtg/src/.eslintrc
+++ b/rtg/src/.eslintrc
@@ -1,10 +1,17 @@
 {
   "extends": "airbnb",
+  "globals": {
+    "window": true,
+    "document": true
+  },
   "rules": {
     "jsx-a11y/anchor-is-valid": [ "error", {
       "components": [ "Link" ],
       "specialLink": [ "to", "hrefLeft", "hrefRight" ],
       "aspects": [ "noHref", "invalidHref", "preferButton" ]
+    }],
+    "no-underscore-dangle": [ "error", {
+      "allowAfterThis": true
     }]
   }
 }
