--- a/rtg/package.json
+++ b/rtg/package.json
@@ -22,6 +22,7 @@
     "react-router-prop-types": "^1.0.3",
     "react-scripts": "^1.1.4",
     "react-tap-event-plugin": "^3.0.2",
+    "verge": "^1.10.2",
     "whatwg-fetch": "^2.0.4"
   },
   "scripts": {
