Add fetch to known globals for eslint

--- a/rtg/src/.eslintrc
+++ b/rtg/src/.eslintrc
@@ -2,7 +2,8 @@
   "extends": "airbnb",
   "globals": {
     "window": true,
-    "document": true
+    "document": true,
+    "fetch": true,
   },
   "rules": {
     "jsx-a11y/anchor-is-valid": [ "error", {
