--- a/rtg/package.json
+++ b/rtg/package.json
@@ -18,6 +18,7 @@
     "react": "^16.3.2",
     "react-avatar-editor": "file:../../../github/react-avatar-editor/",
     "react-dom": "^16.3.2",
+    "react-minimal-pie-chart": "^3.0.2",
     "react-router-dom": "^4.2.2",
     "react-router-prop-types": "^1.0.3",
     "react-scripts": "^1.1.4",
