--- a/rtg/package.json
+++ b/rtg/package.json
@@ -16,7 +16,7 @@
     "npm-run-all": "^4.1.2",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
-    "react-avatar-editor": "file:../../../github/react-avatar-editor/",
+    "react-avatar-editor": "^11.0.3",
     "react-dom": "^16.3.2",
     "react-minimal-pie-chart": "^3.0.2",
     "react-router-dom": "^4.2.2",
