Disable horizontal touch panning within the BetStatsPanel

--- a/rtg/src/.eslintrc
+++ b/rtg/src/.eslintrc
@@ -4,6 +4,7 @@
     "window": true,
     "document": true,
     "fetch": true,
+    "Element": true
   },
   "rules": {
     "jsx-a11y/anchor-is-valid": [ "error", {
