--- a/rtg/package.json
+++ b/rtg/package.json
@@ -18,6 +18,7 @@
     "react-avatar-editor": "^11.0.3",
     "react-dom": "^16.3.2",
     "react-minimal-pie-chart": "^3.0.2",
+    "react-quill": "^1.2.7",
     "react-router-dom": "^4.3.1",
     "react-router-prop-types": "^1.0.3",
     "react-scripts": "^1.1.4",
