Finished adding games for admins

--- a/rtg/package.json
+++ b/rtg/package.json
@@ -9,6 +9,8 @@
     "date-fns": "^1.29.0",
     "eslint-config-airbnb": "^16.1.0",
     "hsl-to-hex": "^1.0.0",
+    "intl": "^1.2.5",
+    "intl-locales-supported": "^1.0.0",
     "jwt-decode": "^2.2.0",
     "material-ui": "^0.20.0",
     "node-sass-chokidar": "^1.2.2",
