--- a/rtg/package.json
+++ b/rtg/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^6.0.0",
     "babel-polyfill": "^6.26.0",
     "blob-polyfill": "^2.0.20171115",
     "canvas-toBlob": "^1.0.0",
     "date-fns": "^1.29.0",
-    "eslint-config-airbnb": "^16.1.0",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.0",
     "hsl-to-hex": "^1.0.0",
     "intl": "^1.2.5",
     "intl-locales-supported": "^1.0.0",
@@ -16,15 +21,14 @@
     "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.2",
     "prop-types": "^15.6.1",
-    "react": "^16.3.2",
+    "react": "^16.5.0",
     "react-avatar-editor": "^11.0.3",
-    "react-dom": "^16.3.2",
+    "react-dom": "^16.5.0",
     "react-minimal-pie-chart": "^3.0.2",
     "react-quill": "^1.2.7",
     "react-router-dom": "^4.3.1",
     "react-router-prop-types": "^1.0.3",
-    "react-scripts": "^1.1.4",
-    "react-tap-event-plugin": "^3.0.2",
+    "react-scripts": "^1.1.5",
     "stickybits": "^3.3.2",
     "verge": "^1.10.2",
     "whatwg-fetch": "^2.0.4"
