--- a/rtg/package.json
+++ b/rtg/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.5.1",
+    "@material-ui/icons": "^1.1.1",
+    "@material-ui/lab": "^1.0.0-alpha.12",
     "ajv": "^6.0.0",
     "babel-polyfill": "^6.26.0",
     "blob-polyfill": "^3.0.20180112",
