--- a/rtg/package.json
+++ b/rtg/package.json
@@ -17,9 +17,8 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.0",
     "hsl-to-hex": "^1.0.0",
-    "intl": "^1.2.5",
-    "intl-locales-supported": "^1.0.0",
     "jwt-decode": "^2.2.0",
+    "material-ui-pickers": "^1.0.0-rc.17",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
     "prop-types": "^15.6.2",
