--- a/rtg/package.json
+++ b/rtg/package.json
@@ -6,7 +6,7 @@
     "@material-ui/core": "^3.3.2",
     "@material-ui/icons": "^3.0.1",
     "@material-ui/lab": "^3.0.0-alpha.21",
-    "ajv": "^6.0.0",
+    "ajv": "^6.5.0",
     "babel-polyfill": "^6.26.0",
     "blob-polyfill": "^3.0.20180112",
     "canvas-toBlob": "^1.0.0",
@@ -18,7 +18,7 @@
     "eslint-plugin-react": "^7.11.0",
     "hsl-to-hex": "^1.0.0",
     "jwt-decode": "^2.2.0",
-    "material-ui-pickers": "^1.0.0-rc.17",
+    "material-ui-pickers": "^1.0.1",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
     "prop-types": "^15.6.2",
