--- a/rtg/package.json
+++ b/rtg/package.json
@@ -3,47 +3,44 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
     "@material-ui/core": "^3.3.2",
     "@material-ui/icons": "^3.0.1",
     "@material-ui/lab": "^3.0.0-alpha.21",
     "ajv": "^6.5.0",
-    "babel-polyfill": "^6.26.0",
     "blob-polyfill": "^3.0.20180112",
     "canvas-toBlob": "^1.0.0",
     "date-fns": "^2.0.0-alpha.16",
-    "eslint": "^5.8.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
     "hsl-to-hex": "^1.0.0",
     "jwt-decode": "^2.2.0",
     "material-ui-pickers": "^1.0.1",
-    "node-sass-chokidar": "^1.3.4",
-    "npm-run-all": "^4.1.3",
+    "node-sass": "^4.10.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
+    "react-app-polyfill": "^0.1.3",
     "react-avatar-editor": "^11.0.4",
     "react-dom": "^16.6.0",
     "react-minimal-pie-chart": "^3.3.0",
     "react-quill": "^1.3.2",
     "react-router-dom": "^4.3.1",
     "react-router-prop-types": "^1.0.4",
-    "react-scripts": "^1.1.5",
+    "react-scripts": "^2.1.1",
     "stickybits": "^3.5.7",
-    "verge": "^1.10.2",
-    "whatwg-fetch": "^3.0.0"
+    "verge": "^1.10.2"
   },
   "scripts": {
-    "clean": "rm -rf build",
-    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
-    "start-js": "react-scripts start",
-    "start": "npm-run-all -p watch-css start-js",
-    "build-js": "react-scripts build",
-    "build": "REACT_APP_ENV=production npm-run-all build-css build-js",
-    "build:demo": "REACT_APP_ENV=demo npm-run-all build-css build-js",
-    "test": "react-scripts test --env=jsdom",
+    "start": "react-scripts start",
+    "build": "REACT_APP_ENV=production react-scripts build",
+    "build:demo": "REACT_APP_ENV=demo react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 10",
+    "not op_mini all"
+  ]
 }
