--- a/rtg/package.json
+++ b/rtg/package.json
@@ -5,29 +5,31 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
-    "@material-ui/core": "^3.3.2",
+    "@date-io/core": "0.0.2",
+    "@date-io/date-fns": "0.0.2",
+    "@material-ui/core": "^3.7.0",
     "@material-ui/icons": "^3.0.1",
-    "@material-ui/lab": "^3.0.0-alpha.21",
-    "ajv": "^6.5.0",
+    "@material-ui/lab": "^3.0.0-alpha.26",
+    "ajv": "^6.6.2",
     "blob-polyfill": "^3.0.20180112",
     "canvas-toBlob": "^1.0.0",
-    "date-fns": "^2.0.0-alpha.16",
+    "date-fns": "^2.0.0-alpha.26",
     "eslint-config-airbnb": "^17.1.0",
     "hsl-to-hex": "^1.0.0",
     "jwt-decode": "^2.2.0",
-    "material-ui-pickers": "^1.0.1",
-    "node-sass": "^4.10.0",
+    "material-ui-pickers": "^2.0.3",
+    "node-sass": "^4.11.0",
     "prop-types": "^15.6.2",
-    "react": "^16.6.0",
+    "react": "^16.6.3",
     "react-app-polyfill": "^0.1.3",
     "react-avatar-editor": "^11.0.4",
-    "react-dom": "^16.6.0",
+    "react-dom": "^16.6.3",
     "react-minimal-pie-chart": "^3.3.0",
-    "react-quill": "^1.3.2",
+    "react-quill": "^1.3.3",
     "react-router-dom": "^4.3.1",
     "react-router-prop-types": "^1.0.4",
     "react-scripts": "^2.1.1",
-    "stickybits": "^3.5.7",
+    "stickybits": "^3.5.8",
     "verge": "^1.10.2"
   },
   "scripts": {
