--- a/rtg/package.json
+++ b/rtg/package.json
@@ -3,33 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/polyfill": "^7.4.0",
-    "@babel/preset-env": "^7.4.2",
-    "@date-io/core": "^1.1.0",
-    "@date-io/date-fns": "^1.1.0",
+    "@babel/polyfill": "^7.6.0",
+    "@babel/preset-env": "^7.6.2",
+    "@date-io/core": "^1.3.11",
+    "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/lab": "^3.0.0-alpha.30",
-    "ajv": "^6.10.0",
+    "ajv": "^6.10.2",
     "blob-polyfill": "^3.0.20180112",
     "canvas-toBlob": "^1.0.0",
-    "date-fns": "^2.0.0-alpha.27",
-    "eslint-config-airbnb": "^17.1.0",
+    "date-fns": "^2.4.1",
+    "eslint-config-airbnb": "^17.1.1",
     "hsl-to-hex": "^1.0.0",
     "jwt-decode": "^2.2.0",
     "material-ui-pickers": "^2.2.4",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
+    "react": "^16.10.1",
     "react-app-polyfill": "^0.2.2",
-    "react-avatar-editor": "^11.0.6",
-    "react-dom": "^16.8.6",
+    "react-avatar-editor": "^11.0.7",
+    "react-dom": "^16.10.1",
     "react-minimal-pie-chart": "^3.5.0",
     "react-quill": "^1.3.3",
-    "react-router-dom": "^5.0.0",
+    "react-router-dom": "^5.1.1",
     "react-router-prop-types": "^1.0.4",
     "react-scripts": "^2.1.8",
-    "stickybits": "^3.6.4",
+    "stickybits": "^3.6.7",
     "verge": "^1.10.2"
   },
   "scripts": {
