--- a/rtg/package.json
+++ b/rtg/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/polyfill": "^7.6.0",
-    "@babel/preset-env": "^7.6.2",
     "@date-io/core": "^1.3.11",
     "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "^3.9.3",
@@ -14,21 +12,21 @@
     "blob-polyfill": "^3.0.20180112",
     "canvas-toBlob": "^1.0.0",
     "date-fns": "^2.4.1",
-    "eslint-config-airbnb": "^17.1.1",
+    "eslint-config-airbnb": "^18.0.1",
     "hsl-to-hex": "^1.0.0",
     "jwt-decode": "^2.2.0",
     "material-ui-pickers": "^2.2.4",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
-    "react": "^16.10.1",
-    "react-app-polyfill": "^0.2.2",
+    "react": "^16.12.0",
+    "react-app-polyfill": "^1.0.5",
     "react-avatar-editor": "^11.0.7",
-    "react-dom": "^16.10.1",
+    "react-dom": "^16.12.0",
     "react-minimal-pie-chart": "^3.5.0",
     "react-quill": "^1.3.3",
     "react-router-dom": "^5.1.1",
     "react-router-prop-types": "^1.0.4",
-    "react-scripts": "^2.1.8",
+    "react-scripts": "^3.3.0",
     "stickybits": "^3.6.7",
     "verge": "^1.10.2"
   },
@@ -40,10 +38,17 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 10",
-    "not op_mini all"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not ie <= 10",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
