--- a/rtg/package.json
+++ b/rtg/package.json
@@ -3,20 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/core": "^1.3.11",
-    "@date-io/date-fns": "^1.3.11",
-    "@material-ui/core": "^3.9.3",
-    "@material-ui/icons": "^3.0.2",
-    "@material-ui/lab": "^3.0.0-alpha.30",
+    "@date-io/core": "^2.0.0",
+    "@date-io/date-fns": "^1.3.13",
+    "@material-ui/core": "^4.9.0",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/pickers": "^3.2.9",
     "ajv": "^6.10.2",
     "blob-polyfill": "^3.0.20180112",
     "canvas-toBlob": "^1.0.0",
-    "date-fns": "^2.4.1",
+    "date-fns": "^2.9.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "hsl-to-hex": "^1.0.0",
     "jwt-decode": "^2.2.0",
-    "material-ui-pickers": "^2.2.4",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
