--- a/rtg/package.json
+++ b/rtg/package.json
@@ -8,7 +8,7 @@
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/pickers": "^3.2.9",
-    "ajv": "^6.10.2",
+    "ajv": "^6.11.0",
     "blob-polyfill": "^3.0.20180112",
     "canvas-toBlob": "^1.0.0",
     "date-fns": "^2.9.0",
@@ -20,14 +20,14 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.5",
-    "react-avatar-editor": "^11.0.7",
+    "react-avatar-editor": "^12.0.0-beta.0",
     "react-dom": "^16.12.0",
-    "react-minimal-pie-chart": "^3.5.0",
+    "react-minimal-pie-chart": "^6.0.1",
     "react-quill": "^1.3.3",
-    "react-router-dom": "^5.1.1",
+    "react-router-dom": "^5.1.2",
     "react-router-prop-types": "^1.0.4",
     "react-scripts": "^3.3.0",
-    "stickybits": "^3.6.7",
+    "stickybits": "^3.7.3",
     "verge": "^1.10.2"
   },
   "scripts": {
