--- a/rtg/package.json
+++ b/rtg/package.json
@@ -12,23 +12,25 @@
     "blob-polyfill": "^3.0.20180112",
     "canvas-toBlob": "^1.0.0",
     "date-fns": "^2.16.1",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
     "hsl-to-hex": "^1.0.0",
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
+    "react": "17.0.1",
     "react-app-polyfill": "^1.0.5",
     "react-avatar-editor": "^12.0.0-beta.0",
-    "react-dom": "^16.12.0",
+    "react-dom": "17.0.1",
     "react-minimal-pie-chart": "^6.0.1",
     "react-quill": "^1.3.3",
     "react-router-dom": "^5.1.2",
     "react-router-prop-types": "^1.0.4",
-    "react-scripts": "^3.3.0",
+    "react-scripts": "4.0.1",
     "stickybits": "^3.7.3",
     "verge": "^1.10.2"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1"
   },
   "scripts": {
     "clean": "rm -rf build",
