--- a/rtg/package.json
+++ b/rtg/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^5.1.2",
     "react-router-prop-types": "^1.0.4",
     "react-scripts": "4.0.1",
+    "react-style-proptype": "^3.2.2",
     "stickybits": "^3.7.3",
     "verge": "^1.10.2"
   },
