Introduce custom LoginError class
In order to satisfy the linter's recommendation to use actual Error
objects in Promise rejections, I'm adding a dedicated LoginError class
which suites the schema used in all AuthService error responses.

This makes the API in all catch clauses that access error details more
concise indeed.

Also fix an error with determining the API base URL for the given
environment.

--- a/rtg/src/.eslintrc
+++ b/rtg/src/.eslintrc
@@ -4,7 +4,8 @@
     "window": true,
     "document": true,
     "fetch": true,
-    "Element": true
+    "Element": true,
+    "localStorage": true
   },
   "parserOptions": {
     // This setting makes eslint stop complaining about dynamic imports (required for React.lazy)
@@ -24,7 +25,6 @@
     // harder to fix but should be re-activated
     "import/no-cycle": "off",
     "react/jsx-props-no-spreading": "off",
-    "react/forbid-prop-types": "off",
     "react/no-danger": "off"
   }
 }
