--- a/rtg/package.json
+++ b/rtg/package.json
@@ -25,7 +25,7 @@
     "react-quill": "^1.3.5",
     "react-router-dom": "^5.1.2",
     "react-router-prop-types": "^1.0.4",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.2",
     "react-style-proptype": "^3.2.2",
     "stickybits": "^3.7.9",
     "verge": "^1.10.2"
