--- a/rtg/package.json
+++ b/rtg/package.json
@@ -16,7 +16,7 @@
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-app-polyfill": "^2.0.0",
-    "react-avatar-editor": "^12.0.0-beta.0",
+    "react-avatar-editor": "^11.1.0",
     "react-dom": "17.0.1",
     "react-minimal-pie-chart": "^8.1.0",
     "react-quill": "^1.3.5",
