--- a/rtg/package.json
+++ b/rtg/package.json
@@ -12,7 +12,6 @@
     "dompurify": "^2.2.6",
     "hsl-to-hex": "^1.0.0",
     "jwt-decode": "^3.1.2",
-    "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-app-polyfill": "^2.0.0",
@@ -24,6 +23,7 @@
     "react-router-prop-types": "^1.0.4",
     "react-scripts": "^4.0.2",
     "react-style-proptype": "^3.2.2",
+    "sass": "^1.32.8",
     "verge": "^1.10.2"
   },
   "devDependencies": {
