--- a/rtg/package.json
+++ b/rtg/package.json
@@ -3,32 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/core": "^1.3.13",
-    "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/pickers": "^3.2.10",
-    "date-fns": "^2.17.0",
-    "dompurify": "^2.2.6",
+    "@date-io/core": "^2.16.0",
+    "@date-io/date-fns": "^2.16.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.0",
+    "@mui/styles": "^5.12.0",
+    "@mui/x-date-pickers": "^6.2.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^2.29.3",
+    "dompurify": "^3.0.2",
     "hsl-to-hex": "^1.0.0",
     "jwt-decode": "^3.1.2",
-    "prop-types": "^15.7.2",
-    "react": "17.0.1",
-    "react-app-polyfill": "^2.0.0",
-    "react-avatar-editor": "^11.1.0",
-    "react-dom": "17.0.1",
-    "react-minimal-pie-chart": "^8.1.0",
-    "react-quill": "^1.3.5",
-    "react-router-dom": "^5.1.2",
-    "react-router-prop-types": "^1.0.4",
-    "react-scripts": "^4.0.2",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-app-polyfill": "^3.0.0",
+    "react-avatar-editor": "^13.0.0",
+    "react-dom": "^18.2.0",
+    "react-minimal-pie-chart": "^8.4.0",
+    "react-quill": "^2.0.0",
+    "react-router-dom": "^6.10.0",
+    "react-router-prop-types": "^1.0.5",
+    "react-scripts": "5.0.1",
     "react-style-proptype": "^3.2.2",
-    "sass": "^1.32.8",
-    "verge": "^1.10.2"
+    "sass": "^1.62.0",
+    "verge": "^1.10.2",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1"
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-jsx-a11y": "^6.7.1"
   },
   "scripts": {
     "clean": "rm -rf build",
@@ -43,12 +50,12 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not ie 11",
       "not op_mini all"
     ],
     "development": [
       "last 1 chrome version",
-      "last 1 firefox version"
+      "last 1 firefox version",
+      "last 1 safari version"
     ]
   }
 }
