--- a/rtg/package.json
+++ b/rtg/package.json
@@ -5,28 +5,29 @@
   "dependencies": {
     "@date-io/core": "^1.3.13",
     "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.11.3",
+    "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/pickers": "^3.2.10",
+    "@material-ui/pickers": "^3.3.11",
     "date-fns": "^2.17.0",
     "dompurify": "^2.2.6",
     "hsl-to-hex": "^1.0.0",
     "jwt-decode": "^3.1.2",
     "prop-types": "^15.7.2",
-    "react": "17.0.1",
+    "react": "17.0.0",
     "react-app-polyfill": "^2.0.0",
     "react-avatar-editor": "^11.1.0",
-    "react-dom": "17.0.1",
+    "react-dom": "17.0.0",
     "react-minimal-pie-chart": "^8.1.0",
-    "react-quill": "^1.3.5",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^5.1.2",
     "react-router-prop-types": "^1.0.4",
-    "react-scripts": "^4.0.2",
+    "react-scripts": "5.0.0",
     "react-style-proptype": "^3.2.2",
     "sass": "^1.32.8",
     "verge": "^1.10.2"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-jsx-a11y": "^6.4.1"
   },
